--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".HomeActivity">
+    tools:context=".home.HomeActivity">
 
     <androidx.viewpager2.widget.ViewPager2
         android:layout_width="match_parent"
@@ -24,7 +24,7 @@
         app:layout_constraintStart_toStartOf="parent"
         android:background="#c3c3c3"
         app:tabSelectedTextColor="@color/black"
-        app:tabIndicatorColor="@color/black">
+        app:tabIndicatorColor="#c3c3c3">
 
         <com.google.android.material.tabs.TabItem
             android:layout_width="wrap_content"
