--- a/app/src/main/res/layout/fragment_lista_pedidos.xml
+++ b/app/src/main/res/layout/fragment_lista_pedidos.xml
@@ -3,12 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ListaPedidosFragment">
+    tools:context=".home.adapters.fragments.ListaPedidosFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="SHEEEEEEEEESH2" />
+        android:text="VIADO" />
 
 </FrameLayout>
