--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -26,7 +26,7 @@
         app:layout_constraintStart_toEndOf="@id/agulhaSvg"
         app:layout_constraintTop_toTopOf="@+id/agulhaSvg" />
 
-    <com.google.android.material.textfield.TextInputEditText
+    <EditText
         android:id="@+id/activity_login_txt_login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -43,7 +43,7 @@
         app:layout_constraintTop_toBottomOf="@+id/agulhaSvg"
         app:layout_constraintVertical_bias="0.0" />
 
-    <com.google.android.material.textfield.TextInputEditText
+    <EditText
         android:id="@+id/activity_login_txt_senha"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -67,7 +67,7 @@
         app:layout_constraintStart_toStartOf="@id/activity_login_txt_senha"
         app:layout_constraintTop_toBottomOf="@id/activity_login_txt_senha" />
 
-    <com.google.android.material.button.MaterialButton
+    <Button
         android:id="@+id/activity_login_btn_entrar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -94,7 +94,7 @@
         android:textStyle="bold"
         android:textSize="16sp"/>
 
-    <com.google.android.material.button.MaterialButton
+    <Button
         android:id="@+id/activity_login_btn_cadastrar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
