--- a/app/src/main/res/layout/fragment_lista_clientes.xml
+++ b/app/src/main/res/layout/fragment_lista_clientes.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".home.adapters.fragments.ListaClientesFragment">
+    tools:context=".home.fragments.ListaClientesFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/fragment_lista_clientes_recyclerview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="ALAN" />
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        tools:listitem="@layout/recycler_clientes_item" />
 
-</FrameLayout>
+
+</LinearLayout>
