--- a/app/src/main/res/layout/recycler_clientes_item.xml
+++ b/app/src/main/res/layout/recycler_clientes_item.xml
@@ -4,7 +4,8 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".home.adapters.ListaClientesAdapter">
+    tools:context=".home.adapters.ListaClientesAdapter"
+    android:padding="16dp">
 
     <androidx.cardview.widget.CardView
         app:layout_constraintTop_toTopOf="parent"
@@ -14,7 +15,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardCornerRadius="12dp"
-        android:layout_marginBottom="16dp"
         app:cardBackgroundColor="#ffbbc3">
 
         <androidx.constraintlayout.widget.ConstraintLayout
