--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -46,7 +46,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:id="@+id/viewpager"
-        app:layout_constraintTop_toBottomOf="@id/activity_home_fab_perfil"
+        app:layout_constraintTop_toBottomOf="@id/activity_home_search"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toTopOf="@id/tabLayout"/>
