--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LoginActivity">
+    tools:context=".login.LoginActivity">
 
     <RelativeLayout
         android:id="@+id/agulhaSvg"
@@ -33,6 +33,7 @@
         android:layout_marginStart="30dp"
         android:layout_marginEnd="30dp"
         android:background="@drawable/text_background"
+        android:inputType="textEmailAddress"
         android:layout_marginTop="36dp"
         android:hint="Email ou CPF"
         android:padding="12dp"
