--- a/app/src/main/res/layout/recycler_clientes_item.xml
+++ b/app/src/main/res/layout/recycler_clientes_item.xml
@@ -1,66 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".home.adapters.ListaClientesAdapter"
-    android:padding="16dp">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    tools:context=".home.adapters.ListaClientesAdapter">
 
     <androidx.cardview.widget.CardView
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="8dp"
+        app:cardBackgroundColor="#ffbbc3"
         app:cardCornerRadius="12dp"
-        app:cardBackgroundColor="#ffbbc3">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <ImageView
+                android:id="@+id/clientes_item_image"
                 android:layout_width="75dp"
                 android:layout_height="75dp"
-                android:id="@+id/clientes_item_image"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
                 android:layout_margin="16dp"
-                android:background="@drawable/image_frame"/>
+                android:background="@drawable/image_frame"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
+                android:id="@+id/clientes_item_nome_cliente"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/clientes_item_nome_cliente"
+                android:layout_marginBottom="16dp"
                 app:layout_constraintBottom_toTopOf="@id/clientes_item_numero_celular"
                 app:layout_constraintStart_toStartOf="@id/clientes_item_numero_celular"
-                android:layout_marginBottom="16dp"
-                tools:text="Nome do Cliente"
-                />
+                tools:text="Nome do Cliente" />
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
                 android:id="@+id/clientes_item_numero_celular"
-                app:layout_constraintTop_toTopOf="@id/clientes_item_image"
-                app:layout_constraintStart_toEndOf="@id/clientes_item_image"
-                app:layout_constraintBottom_toBottomOf="@id/clientes_item_image"
-                android:layout_marginLeft="8dp"
-                tools:text="Número do Celular"
-                />
-
-            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                app:layout_constraintBottom_toBottomOf="@id/clientes_item_image"
+                app:layout_constraintStart_toEndOf="@id/clientes_item_image"
+                app:layout_constraintTop_toTopOf="@id/clientes_item_image"
+                tools:text="Número do Celular" />
+
+            <TextView
                 android:id="@+id/clientes_item_pedidos_realizados"
-                app:layout_constraintTop_toBottomOf="@id/clientes_item_numero_celular"
-                app:layout_constraintStart_toStartOf="@id/clientes_item_numero_celular"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                tools:text="Pedidos realizados"
-                />
+                app:layout_constraintStart_toStartOf="@id/clientes_item_numero_celular"
+                app:layout_constraintTop_toBottomOf="@id/clientes_item_numero_celular"
+                tools:text="Pedidos realizados" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
