--- a/app/src/main/res/layout/recycler_medidas_materiais_item.xml
+++ b/app/src/main/res/layout/recycler_medidas_materiais_item.xml
@@ -3,23 +3,27 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_margin="8dp">
+    xmlns:tools="http://schemas.android.com/tools">
 
     <androidx.cardview.widget.CardView
         android:layout_width="100dp"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_margin="8dp"
         android:backgroundTint="#7DFBFF"
-        app:cardCornerRadius="28dp">
+        app:cardCornerRadius="28dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:gravity="center"
-            android:textStyle="bold"
+            android:id="@+id/recycler_medidas_materiais_item_txt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="12dp"
-            android:text="Material"/>
+            android:gravity="center"
+            android:text="Material"
+            android:textStyle="bold" />
 
     </androidx.cardview.widget.CardView>
 
